[gd_scene load_steps=5 format=3 uid="uid://cydjhi0cnkrs0"]

[ext_resource type="Script" path="res://Enemies/fire_projectile.gd" id="1_jcasx"]

[sub_resource type="Gradient" id="Gradient_4ibg4"]
colors = PackedColorArray(1, 1, 0.243137, 1, 0.713726, 0, 0, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1r5b7"]
gradient = SubResource("Gradient_4ibg4")
height = 16
fill = 1
fill_from = Vector2(0.844037, 0.477064)
fill_to = Vector2(0.123853, 0.623853)
repeat = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jq80l"]
radius = 8.00001
height = 74.0

[node name="Player_fire_Projectile" type="Area2D" groups=["glove", "player_projectile"]]
collision_layer = 128
collision_mask = 4
script = ExtResource("1_jcasx")
speed = 5000

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_1r5b7")
region_rect = Rect2(0, 0, 64, 16)
region_filter_clip_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jq80l")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
